[build-system]
requires = [
    "flit_core >=3.2,<4",
]
build-backend = "flit_core.buildapi"

[project]
name = "powerinfer"
authors = [
    {name = "Holden", email = "hodlenx@gmail.com"},
]
requires-python = ">=3.9"
classifiers = ["License :: OSI Approved :: MIT License"]
version="0.0.1"
description="powerinfer.py: Python helpers for PowerInfer LLM inference engine"

dependencies = [
    "torch>=2",
    "cvxopt==1.3.2"
]
